feat: добавление колбеков

--- a/src/style.scss
+++ b/src/style.scss
@@ -6,6 +6,8 @@
 @import url('./App/common/_fonts.scss');
 @import url('./App/components/MkbField/mkbField.scss');
 @import url('./App/components/MkbField/MkbSelectedElement/mkbSelectedElement.scss');
+@import url('./App/components/MkbSearch/mkbSearch.scss');
+@import url('./App/components/MkbSearch/MkbSelectRow/MkbSelectRow.scss');
 
 :root {
 	--medpult-bg-color: #f2f4f6;
